--- a/dbrowser.html
+++ b/dbrowser.html
@@ -34,7 +34,7 @@
               </div> -->
             </div>
             <div class="rix-price-box label">
-              <a href="https://wallet.bitshares.org/#/asset/RSN" target="_blank"><span id="rix-price" class="rsn-price">rix</span></a>
+              <a href="https://wallet.bitshares.org/#/asset/RSN" target="_blank"><span id="rix-price" class="rsn-price"></span></a>
             </div>
           </div>
           <div class="py-1 d-flex align-items-center justify-content-end">
@@ -46,7 +46,7 @@
                 <a href="https://docs.arisen.network" class="text-small nav-link px-2">Developer Docs</a>
               </li>
               <li class="nav-item">
-                <a href="https://medium.com/peepsology" class="text-small nav-link px-2">Blog</a>
+                <a href="https://medium.com/@peepsology" class="text-small nav-link px-2">Blog</a>
               </li>
               <li class="nav-item">
                 <a href="https://t.me/peepsology" class="text-small nav-link px-2">Community</a>
@@ -338,11 +338,11 @@
             <p>&#xA9; 2020 Peeps. All rights reserved. The Peeps logo is copyright of Peeps and cannot be used without the written consent of Peeps.</p>
 
             <ul class="list-social-links">
-              <li class="text-gray"><a href="#"><i class="socicon-facebook"></i></a></li>
-              <li class="text-gray"><a href="#"><i class="socicon-twitter"></i></a></li>
-              <li class="text-gray"><a href="#"><i class="socicon-youtube"></i></a></li>
-              <li class="text-gray"><a href="#"><i class="socicon-medium"></i></a></li>
-              <li class="text-gray"><a href="#"><i class="socicon-telegram"></i></a></li>
+              <li class="text-gray"><a href="https://www.facebook.com/peepsology"><i class="socicon-facebook"></i></a></li>
+              <li class="text-gray"><a href="https://twitter.com/peepsology"><i class="socicon-twitter"></i></a></li>
+              <li class="text-gray"><a href="https://www.youtube.com/channel/UCoknUFNMUF9ciA_WGmm8pxQ"><i class="socicon-youtube"></i></a></li>
+              <li class="text-gray"><a href="https://medium.com/@peepsology"><i class="socicon-medium"></i></a></li>
+              <li class="text-gray"><a href="https://t.me/peepsology"><i class="socicon-telegram"></i></a></li>
               <!-- <li class="text-gray"><a href="#"><i class="socicon-linkedin"></i></a></li>
               <li class="text-gray"><a href="#"><i class="socicon-instagram"></i></a></li> -->
             </ul>
@@ -416,6 +416,7 @@
     <script type="text/javascript" src="assets/js/jquery.fancybox.min.js"></script>
     <script type="text/javascript" src="assets/js/zoom.min.js"></script>
     <script type="text/javascript" src="assets/js/theme.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.min.js"></script>
     <script type="text/javascript" src="assets/js/custom/custom.js"></script>
     <script>
       // Rix price
