--- a/dnames.html
+++ b/dnames.html
@@ -222,7 +222,7 @@
 <!--------------------------------- Header Block End --------------------------->
 <!-------------------------dNames CTA Block Start------------------------>
 <section class="height-100 bg-opaque">
-    <img src="assets/img/Pfeiffer Beach.jpg" alt="Pfeiffer Beach" class="bg-image">
+    <img src="assets/img/Photograph Of Pfeiffer Beach.jpg" alt="Pfeiffer Beach" class="bg-image">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
@@ -231,7 +231,7 @@
                     <img src="assets/img/logo/dnames.png" alt="dname">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Decentralized Domain Names.</h1>
-                <p class="description">dNames is the dWeb's first domain registrar for decentralized top-level domains (dTLDs) like .dcom, .dnet, .dorg, .dweb and more. dNames launches August 31st, 2020.</p>
+                <p class="description" style="color:#fff;">dNames is the dWeb's first domain registrar for decentralized top-level domains (dTLDs) like .dcom, .dnet, .dorg, .dweb and more. dNames launches August 31st, 2020.</p>
                 <div class="text-center">
                     <a href="#search" class="btn btn-lg btn-white">Search For Your Domain </a>
                     <a href="#search"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
@@ -339,7 +339,7 @@
             <div class="">
                 <h1 class="display-4">Become A Member & Support Our Development</h1>
                 <p class="description">For just $3/month, you can get daily updates from PeepsLabs and can support our fight to bring freedom back to the web</p>
-                <a href="fund.html" class="btn btn-lg btn-support">Button</a>
+                <a href="fund.html" class="btn btn-lg btn-support">Fund Us</a>
             </div>
         </div>
       </div>
