--- a/dsearch.html
+++ b/dsearch.html
@@ -231,9 +231,9 @@
                     <img src="assets/img/logo/dseek.png" alt="dsearch">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Find Freedom.</h1>
-                <p class="description">dSearch is a search engine that allows users to search the decentralized web inside and out, without sacrificing their privacy or their rights in the process. dSearch launches September 1st, 2020.</p>
+                <p class="description" style="color: #fff;">dSearch is a search engine that allows users to search the decentralized web inside and out, without sacrificing their privacy or their rights in the process. dSearch launches September 1st, 2020.</p>
                 <div class="text-center">
-                    <a href="#search-the-dweb"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
+                    <a href="#search-the-dweb"><i class="material-icons d-block down-arrow arrow bounce" style="color: #fff;">keyboard_arrow_down</i></a>
                 </div>
               </div>
         </div>
@@ -315,7 +315,7 @@
             <div class="">
                 <h1 class="display-4">Become A Member & Support Our Development</h1>
                 <p class="description">For just $3/month, you can get daily updates from PeepsLabs and can support our fight to bring freedom back to the web</p>
-                <a href="fund.html" class="btn btn-lg btn-support">Button</a>
+                <a href="fund.html" class="btn btn-lg btn-support">Fund Us</a>
             </div>
         </div>
       </div>
