--- a/dsocial.html
+++ b/dsocial.html
@@ -222,7 +222,7 @@
 <!--------------------------------- Header Block End --------------------------->
 <!-------------------------dSocial CTA Block Start------------------------>
 <section class="height-100 bg-opaque">
-    <img src="assets/img/Old Faithful.jpg" alt="Old Faithful At Yellowstone" class="bg-image">
+    <img src="assets/img/Photograph Of Old Faithfu.jpg" alt="Old Faithful At Yellowstone" class="bg-image">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
@@ -231,7 +231,7 @@
                     <img src="assets/img/logo/dsocial.png" alt="dsocial">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Here Is Your Voice Back.</h1>
-                <p class="description">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate. Reserve your username now and join the people's network.</p>
+                <p class="description" style="color: #b5b3b3;">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate. Reserve your username now and join the people's network.</p>
                 <div class="text-center"><a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white">Join The Social Revolution</a></div>
                 <a href="#censorship-resistant"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
@@ -265,7 +265,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">and they can't silence us.</h1>
-                <p class="description">: Since dSocial is completely decentralized and hosted across the server-less web, it can never be seized or taken down by anyone, even a bunch of social justice warriors on a rampage.</p>
+                <p class="description">Since dSocial is completely decentralized and hosted across the server-less web, it can never be seized or taken down by anyone, even a bunch of social justice warriors on a rampage.</p>
                 <a href="#a-social-economy"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -298,7 +298,7 @@
             <div class="">
                 <h1 class="display-4">a social revolution is launching in...</h1>
                 <span class="h1" data-countdown-date="2020-08-31"></span>
-                <div class="text-center"><a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white">Reserve Your Username Now</a></div>
+                <div class="text-center"><a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white" style="border: 2px solid rgb(71, 116, 182);">Reserve Your Username Now</a></div>
               </div>
         </div>
       </div>
@@ -314,7 +314,7 @@
             <div class="">
                 <h1 class="display-4">Become A Member & Support Our Development</h1>
                 <p class="description">For just $3/month, you can get daily updates from PeepsLabs and can support our fight to bring freedom back to the web</p>
-                <a href="fund.html" class="btn btn-lg btn-support">Button</a>
+                <a href="fund.html" class="btn btn-lg btn-support">Fund Us</a>
             </div>
         </div>
       </div>
