--- a/fund.html
+++ b/fund.html
@@ -231,7 +231,7 @@
                     <img src="assets/img/logo/dsocial.png" alt="dsocial">
                 </div> -->
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">free speech matters.</h1>
-                <p class="description">There are many ways to fund our mission to bring much needed change to the worldwide web, whether it's by joining the "Patriots Club" or simply donating to our efforts. It's patriots like yourself that continue to keep this decentralized dream of ours alive and we need your help in order to reach our goal of raising $100,000.</p>
+                <p class="description" style="color: #fff;">There are many ways to fund our mission to bring much needed change to the worldwide web, whether it's by joining the "Patriots Club" or simply donating to our efforts. It's patriots like yourself that continue to keep this decentralized dream of ours alive and we need your help in order to reach our goal of raising $100,000.</p>
                 <div class="text-center">
                     <a href="join.html" class="btn btn-lg btn-white">Join The Patriot Club</a>
                     <a href="donate.html" class="btn btn-lg btn-white">Donate To Development</a>
