--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
             <div class="logo-rounded ">
               <img src="assets/img/logo/dbrowser.png" alt="dbrowser">
             </div>
-            <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Experience The Open Web."</h1>
+            <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Experience The Open Web.</h1>
               <p class="description">dBrowser allows users and developers to browse the dWeb and develop decentralized websites and applications as well. dBrowser is available for MacOS, Windows and Linux, where you can experience the decentralized and open web for yourself.</p>
-              <a href="https://dwebx.org" class="btn btn-lg btn-black" style="color:#fff">Learn More About dBrowser</a>
+              <a href="dbrowser.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dBrowser</a>
               <a href="#peepsid"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
       </div>
@@ -293,9 +293,9 @@
             <div class="logo-rounded ">
               <img src="assets/img/logo/peepsLogo.png" alt="peeps">
             </div>
-            <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">One Identity. A World Of Possibilities."</h1>
+            <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">One Identity. A World Of Possibilities.</h1>
               <p class="description">The dWeb and its apps use a universal and decentralized authentication system. One account allows you to use any dWeb-powered apps, it is cryptographically secure and impossible to hack.</p>
-              <a href="https://peepsid.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About PeepsID</a>
+              <a href="peepsid.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About PeepsID</a>
               <a href="#dwallet"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
       </div>
@@ -314,9 +314,9 @@
             <div class="logo-rounded ">
               <img src="assets/img/logo/dwallet.png" alt="dwallet">
             </div>
-            <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Experience The Open Web."</h1>
+            <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Better Than A Bank.</h1>
               <p class="description">dWallet allows users to manage their PeepsID as well as all the crypto they've earned using various apps on the dWeb, like dSocial. dWallet is available for MacOS, Windows, Linux and Android.</p>
-              <a href="https://dwallet.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dWallet</a>
+              <a href="dwallet.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dWallet</a>
               <a href="#dsocial"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
       </div>
@@ -336,7 +336,7 @@
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Here Is Your Voice Back.</h1>
               <p class="description">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their own data and earn for the data they curate.</p>
-              <a href="https://dsocial.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dSocial</a>
+              <a href="dsocial.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dSocial</a>
               <a href="#support"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
       </div>
@@ -352,7 +352,7 @@
           <div class="">
               <h1 class="display-4">Become A Member & Support Our Development</h1>
               <p class="description">For just $3/month, you can get daily updates from PeepsLabs and can support our fight to bring freedom back to the web</p>
-              <a href="fund.html" class="btn btn-lg btn-support">Button</a>
+              <a href="fund.html" class="btn btn-lg btn-support">Fund Us</a>
           </div>
       </div>
     </div>
