--- a/peepsid.html
+++ b/peepsid.html
@@ -231,7 +231,7 @@
                     <img src="assets/img/logo/peepsLogo.png" alt="dwallet">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">One ID. Millions Of Possibilities.</h1>
-                <p class="description">A PeepsID is your account on the dWeb and for all Peeps apps. It is also completely unhackable and the only account you'll ever need.</p>
+                <p class="description" style="color: #fff;">A PeepsID is your account on the dWeb and for all Peeps apps. It is also completely unhackable and the only account you'll ever need.</p>
                 <div class="text-center">
                     <a href="https://signup.peepsid.com" class="btn btn-lg btn-white">Create A PeepsID</a>
                 </div>
@@ -251,7 +251,7 @@
             <div class="">
                 <h1 class="display-4">Become A Member & Support Our Development</h1>
                 <p class="description">For just $3/month, you can get daily updates from PeepsLabs and can support our fight to bring freedom back to the web</p>
-                <a href="fund.html" class="btn btn-lg btn-support">Button</a>
+                <a href="fund.html" class="btn btn-lg btn-support">Fund Us</a>
             </div>
         </div>
       </div>
