--- a/peeros.html
+++ b/peeros.html
@@ -319,7 +319,7 @@
             <div class="">
                 <h1 class="display-4">Become A Member & Support Our Development</h1>
                 <p class="description">For just $3/month, you can get daily updates from PeepsLabs and can support our fight to bring freedom back to the web</p>
-                <a href="fund.html" class="btn btn-lg btn-support">Button</a>
+                <a href="fund.html" class="btn btn-lg btn-support">Fund Us</a>
             </div>
         </div>
       </div>
