--- a/dbrowser.html
+++ b/dbrowser.html
@@ -231,8 +231,8 @@
                     <img src="assets/img/logo/dbrowser.png" alt="dbrowser">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Experience The Open Web.</h1>
-                <p class="description">dBrowser is a web browser for Linux, MacOS, and Windows that allows users to browse and develop upon the decentralized web (dweb://).</p>
-                <div class="text-center"><a href="#" class="btn btn-lg btn-white">Download dBrowser For OS</a></div>
+                <p class="description" style="color: #fff;">dBrowser is a web browser for Linux, MacOS, and Windows that allows users to browse and develop upon the decentralized web (dweb://).</p>
+                <div class="text-center"><a href="https://github.com/dbrowser/dbrowser/releases" class="btn btn-lg btn-white" id='os_download' target="_blank">Download for OS</a></div>
                 <a href="#browse-the-dweb"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -313,7 +313,7 @@
             <div class="">
                 <h1 class="display-4">Become A Member & Support Our Development</h1>
                 <p class="description">For just $3/month, you can get daily updates from PeepsLabs and can support our fight to bring freedom back to the web</p>
-                <a href="fund.html" class="btn btn-lg btn-support">Button</a>
+                <a href="fund.html" class="btn btn-lg btn-support">Fund Us</a>
             </div>
         </div>
       </div>
@@ -427,6 +427,35 @@
             .catch(function (error) {
                 console.log(error)
             });
+      
+      // Os detection
+      var isMobile = window.orientation > -1;
+        if(isMobile){
+            document.getElementById('os_download').innerHTML = `Download For Mobile`
+            document.getElementById('os_download').disabled = true
+        }
+
+        else{
+        if(navigator.userAgent.match(/linux/i)) {
+            document.getElementById('os_download').innerHTML = `Download For LinuxOS`
+        }  if(navigator.userAgent.match(/mac/i)) {
+            document.getElementById('os_download').innerHTML = `Download For MacOS`
+        }  if(navigator.userAgent.match(/win/i)) {
+            document.getElementById('os_download').innerHTML = `Download For Windows`
+        } 
+        }
+        
+        let txt = document.getElementById('os_download');
+            if(txt.innerHTML.indexOf('Linux') !== -1) {
+                txt.href = 'https://github.com/dBrowser/dbrowser/releases/download/1.7.5/dbrowser-1.7.5-x86_64.AppImage'
+            } else if(txt.innerHTML.indexOf('Mac') !== -1) {
+                txt.href = 'https://github.com/dBrowser/dbrowser/releases/download/1.7.5/dbrowser-1.7.5.dmg'
+            } else  if(txt.innerHTML.indexOf('Win') !== -1) {
+                txt.href = 'https://github.com/dBrowser/dbrowser/releases/download/1.7.5/dbrowser-setup-1.7.5.exe'
+            }
+            else{
+                txt.href = "#"
+            }
 
     </script>
 
