--- a/dwallet.html
+++ b/dwallet.html
@@ -230,10 +230,10 @@
                 <div class="logo-rounded ">
                     <img src="assets/img/logo/dwallet.png" alt="dwallet">
                 </div>
-                <h1 class="display-4 text-white font-alt-1 text-center mt-2">Better Than A Bank."</h1>
-                <p class="description">dWallet allows users to manage and spend their cryptocurrency earnings across the entire Peeps ecosystem of decentralized applications.</p>
+                <h1 class="display-4 text-white font-alt-1 text-center mt-2">Better Than A Bank.</h1>
+                <p class="description" style="color: #fff;">dWallet allows users to manage and spend their cryptocurrency earnings across the entire Peeps ecosystem of decentralized applications.</p>
                 <div class="text-center">
-                    <a href="https://github.com/peepsx/peeros-whitepaper" class="btn btn-lg btn-white">Download dWallet For OS</a>
+                  <div class="text-center"><a href="https://github.com/dbrowser/dbrowser/releases" class="btn btn-lg btn-white" id='os_download' target="_blank">Download for OS</a></div>
                 </div>
                 <a href="#manage-earnings"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
@@ -319,7 +319,7 @@
             <div class="">
                 <h1 class="display-4">Become A Member & Support Our Development</h1>
                 <p class="description">For just $3/month, you can get daily updates from PeepsLabs and can support our fight to bring freedom back to the web</p>
-                <a href="fund.html" class="btn btn-lg btn-support">Button</a>
+                <a href="fund.html" class="btn btn-lg btn-support">Fund Us</a>
             </div>
         </div>
       </div>
@@ -433,6 +433,35 @@
             .catch(function (error) {
                 console.log(error)
             });
+        
+        // Os detection
+      var isMobile = window.orientation > -1;
+        if(isMobile){
+            document.getElementById('os_download').innerHTML = `Download For Mobile`
+            document.getElementById('os_download').disabled = true
+        }
+
+        else{
+        if(navigator.userAgent.match(/linux/i)) {
+            document.getElementById('os_download').innerHTML = `Download For LinuxOS`
+        }  if(navigator.userAgent.match(/mac/i)) {
+            document.getElementById('os_download').innerHTML = `Download For MacOS`
+        }  if(navigator.userAgent.match(/win/i)) {
+            document.getElementById('os_download').innerHTML = `Download For Windows`
+        } 
+        }
+        
+        let txt = document.getElementById('os_download');
+            if(txt.innerHTML.indexOf('Linux') !== -1) {
+                txt.href = 'https://github.com/dBrowser/dbrowser/releases/download/1.7.5/dbrowser-1.7.5-x86_64.AppImage'
+            } else if(txt.innerHTML.indexOf('Mac') !== -1) {
+                txt.href = 'https://github.com/dBrowser/dbrowser/releases/download/1.7.5/dbrowser-1.7.5.dmg'
+            } else  if(txt.innerHTML.indexOf('Win') !== -1) {
+                txt.href = 'https://github.com/dBrowser/dbrowser/releases/download/1.7.5/dbrowser-setup-1.7.5.exe'
+            }
+            else{
+                txt.href = "#"
+            }
 
     </script>
 
