--- a/dnames.html
+++ b/dnames.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="dNames is the dWeb's first domain registrar for decentralized top-level domains (dTLDs) like .dcom, .dnet, .dorg, .dweb and more.">
     <meta name="keywords" content="dtlds, dtld registrar, decentralized domain names, decentralized domains">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
    
