--- a/dsocial.html
+++ b/dsocial.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="dSocial is the world's first truly decentralized and censorship-resistant social network where you earn for being you.">
     <meta name="keywords" content="dsocial, decentralized social network, censorship-resistant social network, social networking dapp, twitter alternative">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
    
