--- a/dwallet.html
+++ b/dwallet.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="dWallet allows users to manage and spend their cryptocurrency earnings across the entire Peeps ecosystem of decentralized applications.">
     <meta name="keywords" content="dwallet, peeps wallet, rix wallet, dsocial wallet, arisebank">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
    
