--- a/peepsid.html
+++ b/peepsid.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A PeepsID is your account on the dWeb, completely unhackable and the only account you'll ever need on the decentralized web.">
     <meta name="keywords" content="dweb account, arisen account, peepsid, peeps account">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
    
