--- a/blocks.html
+++ b/blocks.html
@@ -5,6 +5,9 @@
     <title>Insight Bootstrap Theme</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A corporate Bootstrap theme by Medium Rare">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
    
