--- a/dbrowser.html
+++ b/dbrowser.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="dBrowser is a web browser for Linux, MacOS and Windows that allows users to browser and develop upon the decentralized web (dweb://).">
     <meta name="keywords" content="dbrowser, dweb browser, decentralized web browser, dweb web browser">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
    
