--- a/fund.html
+++ b/fund.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="People from around the world support our mission to bring freedom back to the Internet and for the price of a cup of coffee, you can too.">
     <meta name="keywords" content="">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
    
