--- a/peeros.html
+++ b/peeros.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="PeerOS is the world's first decentralized operating system and is designed around decentralized applications that protect the privacy and rights of its users.">
     <meta name="keywords" content="peeros, peeps os, peeps operating system, decentralized operating system, decentralized os, decentralized android os">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
    
