commit before pulling

--- a/donate.html
+++ b/donate.html
@@ -15,6 +15,8 @@
    
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all">
     <link href="assets/css/custom.css" rel="stylesheet">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     
   </head>
   <body>
@@ -255,11 +257,11 @@
               <li class="nav-item flex-fill">
                 <a class="nav-link" href="#third">3. Choose Payment Method</a>
               </li>
-              <li class="nav-item flex-fill">
+              <!-- <li class="nav-item flex-fill">
                 <a class="nav-link" href="#fourth">4. Payment</a>
-              </li>
+              </li> -->
               <li class="nav-item flex-fill">
-                <a class="nav-link" href="#fifth">5. Success</a>
+                <a class="nav-link" href="#fourth">4. Success</a>
               </li>
             </ul>
             <div class="tab-content">
@@ -393,18 +395,17 @@
                     <label class="custom-control-label" for="paymentRadio2">PayPal</label>
                   </div>
                   <!-- </form> -->
-                  <button  type="button" onclick="thirdNextButton()">Next
-                    Step</button>
+                  <button class="btn" type="button" onclick="thirdNextButton()">Next Step</button>
                 </div>
               </div>
-              <div id="fourth">
+              <!-- <div id="fourth">
                 <div class="card-body py-4">
                   <h3>Make "one-time" or "recurring" donation of "amount"</h3>
                   <p>Other functionalities to be added here</p>
                   <button class="btn btn-primary sw-btn-next" type="submit">Next Step</button>
                 </div>
-              </div>
-              <div id="fifth">
+              </div> -->
+              <div id="fourth">
                 <div class="card-body py-4">
                   <h3>Thank you so much for your donation of "amount" and helping further this decentralized dream of
                     ours!</h3>
@@ -634,7 +635,7 @@
         paymentType = document.getElementById('paymentRadio2').value;
       }
          console.log('paymenttype',paymentType)
-      
+         window.location="#fourth"
     }
 
 
